Exlude calculation day

--- a/EnergyOverAll.html
+++ b/EnergyOverAll.html
@@ -11,11 +11,13 @@
 <script>
 
     $(document).ready(function(){
-        var plantData = fetchPlantData('https://localhost:7131/Solar/Powerplants/WxHCombjzTaw/Energy/ForDay?day=2025-03-24');
-        //console.log(plantData);
+        const forDay = '2025-03-24';
 
         var labels = [];
         var values = [];
+
+        var plantData = fetchPlantData('https://localhost:7131/Solar/Powerplants/WxHCombjzTaw/Energy/ForDay?day=' + forDay);
+        //console.log(plantData);
 
         for (const [key, value] of Object.entries(plantData)) {
             labels.push(new Date(key).toLocaleTimeString('de-DE', {hour: '2-digit', minute: '2-digit'}));
