Correct the label to energy

--- a/EnergyOverAll.html
+++ b/EnergyOverAll.html
@@ -30,7 +30,7 @@
                 labels: labels,
                 datasets: [{
                     fill: true,
-                    label: 'Solar Powerplant Power (W)',
+                    label: 'Solar Powerplant Energy (kWh)',
                     lineTension: 0,
                     backgroundColor: "rgba(0,0,255,0.25)",
                     borderColor: "rgba(0,0,255,0.1)",
