--- a/SolarPlantDisplay.Html/RoofsPower.html
+++ b/SolarPlantDisplay.Html/RoofsPower.html
@@ -11,7 +11,7 @@
 
 <script> 
     $(document).ready(function(){
-        const forDay = '2025-03-24';
+        const forDay = actualDate();
 
         var labels = [];
         var valuesEast = [];
@@ -81,6 +81,16 @@ function fetchPlantData(url) {
 
     return JSON.parse(result); 
 } 
+
+function actualDate() {
+    const date = new Date();
+
+    let day = date.getDate();
+    let month = date.getMonth();
+    let year = date.getFullYear();
+
+    return '${year}-${month}-${day}';
+}
 </script>
 
 </body>
