--- a/SolarPlantDisplay.Html/Envelope.html
+++ b/SolarPlantDisplay.Html/Envelope.html
@@ -11,7 +11,7 @@
 
 <script> 
     $(document).ready(function(){
-        const forDay = '2025-03-24';
+        const forDay = actualDate();
 
         var labels = [];
         var values = [];
@@ -68,6 +68,17 @@ function fetchPlantData(url) {
 
   return JSON.parse(result); 
 } 
+
+function actualDate() {
+    const date = new Date();
+
+    let day = date.getDate();
+    let month = date.getMonth();
+    let year = date.getFullYear();
+
+    // This arrangement can be altered based on how we want the date's format to appear.
+    return '${year}-${month}-${day}';
+}
 </script>
 
 </body>
