--- a/SolarPlantDisplay.Html/RoofsEnvelopeOverAll.html
+++ b/SolarPlantDisplay.Html/RoofsEnvelopeOverAll.html
@@ -42,7 +42,7 @@
                 labels: labels,
                 datasets: [{
                     fill: true,
-                    label: plantData[0]['Name'] + ' / Leistung (W)',
+                    label: plantData[0]['Name'] + ' Power (W)',
                     lineTension: 0,
                     backgroundColor: "rgba(255,0,0,0.25)",
                     borderColor: "rgba(255,0,0,0.1)",
@@ -50,7 +50,7 @@
                 },
                 {
                     fill: true,
-                    label: plantData[1]['Name'] + ' / Leistung (W)',
+                    label: plantData[1]['Name'] + ' Power (W)',
                     lineTension: 0,
                     backgroundColor: "rgba(0,255,0,0.25)",
                     borderColor: "rgba(0,255,0,0.1)",
@@ -58,7 +58,7 @@
                 },
                 {
                     fill: true,
-                    label: 'Solar Powerplant Leistung (W)',
+                    label: 'Solar Powerplant Power (W)',
                     lineTension: 0,
                     backgroundColor: "rgba(0,0,255,0.25)",
                     borderColor: "rgba(0,0,255,0.1)",
