--- a/SolarPlantDisplay.Html/RoofsPower.html
+++ b/SolarPlantDisplay.Html/RoofsPower.html
@@ -35,7 +35,7 @@
                 labels: labels,
                 datasets: [{
                     fill: true,
-                    label: plantData[0]['Name'] + ' / Leistung (W)',
+                    label: plantData[0]['Name'] + ' Power (W)',
                     lineTension: 0,
                     backgroundColor: "rgba(255,0,0,0.25)",
                     borderColor: "rgba(255,0,0,0.1)",
@@ -43,7 +43,7 @@
                 },
                 {
                     fill: true,
-                    label: plantData[1]['Name'] + ' / Leistung (W)',
+                    label: plantData[1]['Name'] + ' Power (W)',
                     lineTension: 0,
                     backgroundColor: "rgba(0,255,0,0.25)",
                     borderColor: "rgba(0,255,0,0.1)",
