--- a/SolarPlantDisplay.Html/RoofsEnvelopeOverAll.html
+++ b/SolarPlantDisplay.Html/RoofsEnvelopeOverAll.html
@@ -5,113 +5,115 @@
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
         crossorigin="anonymous">
 </script>
-<body>
-    <canvas id="powerPlantChart" style="width:100%;max-width:100%"></canvas>
+<head>
     <script>
 
-    $(document).ready(function(){
-        const forDay = actualDate();
+        $(document).ready(function () {
+            const forDay = actualDate();
 
-        var labels = [];
-        var values = [];
-        var valuesEast = [];
-        var valuesWest = [];
+            var labels = [];
+            var values = [];
+            var valuesEast = [];
+            var valuesWest = [];
 
-        var plantData = fetchPlantData('https://localhost:7131/Solar/Powerplants/WxHCombjzTaw/Roofs/Power/ForDay?day=' + forDay);
-        //console.log(plantData);
+            var plantData = fetchPlantData('https://localhost:7131/Solar/Powerplants/WxHCombjzTaw/Roofs/Power/ForDay?day=' + forDay);
+            //console.log(plantData);
 
-        for (const [key, value] of Object.entries(plantData[0]['EarningData'])) {
-            valuesEast.push(value);
-        }
-
-        for (const [key, value] of Object.entries(plantData[1]['EarningData'])) {
-            valuesWest.push(value);
-        }
-
-        var plantDataOverAll = fetchPlantData('https://localhost:7131/Solar/Powerplants/WxHCombjzTaw/Power/ForDay?day=' + forDay);
-        //console.log(plantData);
-
-        for (const [key, value] of Object.entries(plantDataOverAll)) {
-            labels.push(new Date(key).toLocaleTimeString('de-DE', { hour: '2-digit', minute: '2-digit' }));
-            values.push(value);
-        }
-
-        new Chart("powerPlantChart", {
-            type: "line",
-            data: {
-                labels: labels,
-                datasets: [{
-                    fill: true,
-                    label: plantData[0]['Name'] + ' Power (W)',
-                    lineTension: 0,
-                    backgroundColor: "rgba(255,0,0,0.25)",
-                    borderColor: "rgba(255,0,0,0.1)",
-                    data: valuesEast
-                },
-                {
-                    fill: true,
-                    label: plantData[1]['Name'] + ' Power (W)',
-                    lineTension: 0,
-                    backgroundColor: "rgba(0,255,0,0.25)",
-                    borderColor: "rgba(0,255,0,0.1)",
-                    data: valuesWest
-                },
-                {
-                    fill: true,
-                    label: 'Solar Powerplant Power (W)',
-                    lineTension: 0,
-                    backgroundColor: "rgba(0,0,255,0.25)",
-                    borderColor: "rgba(0,0,255,0.1)",
-                    data: values
-                }]
-        },
-        options: {
-            layout: {
-                padding: 60,
-                legend: { display: true },
-                layout: { autoPadding: true },
-                scales: {
-                    xAxes: [{ ticks: { maxTicksLimit: 30 } }],
-                    yAxes: [{ ticks: { min: 0 } }]
-                }
-            },
-            plugins: {              
-                title: {
-                    display: true,
-                    text: 'Allover earnings for all roofs'
-                }
+            for (const [key, value] of Object.entries(plantData[0]['EarningData'])) {
+                valuesEast.push(value);
             }
+
+            for (const [key, value] of Object.entries(plantData[1]['EarningData'])) {
+                valuesWest.push(value);
+            }
+
+            var plantDataOverAll = fetchPlantData('https://localhost:7131/Solar/Powerplants/WxHCombjzTaw/Power/ForDay?day=' + forDay);
+            //console.log(plantData);
+
+            for (const [key, value] of Object.entries(plantDataOverAll)) {
+                labels.push(new Date(key).toLocaleTimeString('de-DE', { hour: '2-digit', minute: '2-digit' }));
+                values.push(value);
+            }
+
+            new Chart("powerPlantChart", {
+                type: "line",
+                data: {
+                    labels: labels,
+                    datasets: [{
+                        fill: true,
+                        label: plantData[0]['Name'] + ' Power (W)',
+                        lineTension: 0,
+                        backgroundColor: "rgba(255,0,0,0.25)",
+                        borderColor: "rgba(255,0,0,0.1)",
+                        data: valuesEast
+                    },
+                    {
+                        fill: true,
+                        label: plantData[1]['Name'] + ' Power (W)',
+                        lineTension: 0,
+                        backgroundColor: "rgba(0,255,0,0.25)",
+                        borderColor: "rgba(0,255,0,0.1)",
+                        data: valuesWest
+                    },
+                    {
+                        fill: true,
+                        label: 'Solar Powerplant Power (W)',
+                        lineTension: 0,
+                        backgroundColor: "rgba(0,0,255,0.25)",
+                        borderColor: "rgba(0,0,255,0.1)",
+                        data: values
+                    }]
+                },
+                options: {
+                    layout: {
+                        padding: 60,
+                        legend: { display: true },
+                        layout: { autoPadding: true },
+                        scales: {
+                            xAxes: [{ ticks: { maxTicksLimit: 30 } }],
+                            yAxes: [{ ticks: { min: 0 } }]
+                        }
+                    },
+                    plugins: {
+                        title: {
+                            display: true,
+                            text: 'Allover earnings for all roofs'
+                        }
+                    }
+                }
+            });
+        });
+
+        function fetchPlantData(url) {
+            var result = '{}';
+
+            $.ajax({
+                url: url,
+                type: 'get',
+                async: false,
+                success: function (data) {
+                    result = data;
+                },
+                error: function () {
+                    result;
+                }
+            });
+
+            return JSON.parse(result);
         }
-    });
-});
 
-function fetchPlantData(url) {
-    var result = '{}';
+        function actualDate() {
+            const date = new Date();
 
-    $.ajax({
-        url: url,
-        type: 'get',
-        async: false,
-        success: function(data) {
-            result = data;
-        },
-        error: function() {
-            result;
+            let day = date.getDate();
+            let month = date.getMonth();
+            let year = date.getFullYear();
+
+            return '${year}-${month}-${day}';
         }
-    });
-
-    return JSON.parse(result);
-}
- 
-function actualDate() {
-    const date = new Date();
-
-    let day = date.getDate();
-    let month = date.getMonth();
-    let year = date.getFullYear();
-
-    return '${year}-${month}-${day}';
-}
-</script>
+    </script>
+</head>
+<body>
+    <canvas id="powerPlantChart" style="width:100%;max-width:100%"></canvas>
 </body>
 </html>
