--- a/SolarPlantDisplay.Html/Envelope.html
+++ b/SolarPlantDisplay.Html/Envelope.html
@@ -7,64 +7,66 @@
     crossorigin="anonymous">
 </script>
 <head>
-    <script>
+    <script type="module">
         $(document).ready(function () {
             const forDay = actualDate();
 
             var labels = [];
             var values = [];
+            
+            (async () => {
+                var plantData = await fetchPlantData('https://localhost:7131/Solar/Powerplants/WxHCombjzTaw/Power/ForDay?day=' + forDay);
+                //console.log(plantData);
 
-            var plantData = fetchPlantData('https://localhost:7131/Solar/Powerplants/WxHCombjzTaw/Power/ForDay?day=' + forDay);
-            //console.log(plantData);
+                for (const [key, value] of Object.entries(plantData)) {
+                    labels.push(new Date(key).toLocaleTimeString('de-DE', { hour: '2-digit', minute: '2-digit' }));
+                    values.push(value);
+                }
 
-            for (const [key, value] of Object.entries(plantData)) {
-                labels.push(new Date(key).toLocaleTimeString('de-DE', { hour: '2-digit', minute: '2-digit' }));
-                values.push(value);
-            }
-
-            new Chart("powerPlantChart", {
-                type: "line",
-                data: {
-                    labels: labels,
-                    datasets: [{
-                        fill: true,
-                        label: 'Solar Powerplant Power (W)',
-                        lineTension: 0,
-                        backgroundColor: "rgba(0,0,255,0.25)",
-                        borderColor: "rgba(0,0,255,0.1)",
-                        data: values
-                    }]
-                },
-                options: {
-                    layout: {
-                        padding: 25,
-                        legend: { display: true },
-                        layout: { autoPadding: true },
-                        scales: {
-                            xAxes: [{ ticks: { maxTicksLimit: 30 } }],
-                            yAxes: [{ ticks: { min: 0 } }]
+                new Chart("powerPlantChart", {
+                    type: "line",
+                    data: {
+                        labels: labels,
+                        datasets: [{
+                            fill: true,
+                            label: 'Solar Powerplant Power (W)',
+                            lineTension: 0,
+                            backgroundColor: "rgba(0,0,255,0.25)",
+                            borderColor: "rgba(0,0,255,0.1)",
+                            data: values
+                        }]
+                    },
+                    options: {
+                        layout: {
+                            padding: 25,
+                            legend: { display: true },
+                            layout: { autoPadding: true },
+                            scales: {
+                                xAxes: [{ ticks: { maxTicksLimit: 30 } }],
+                                yAxes: [{ ticks: { min: 0 } }]
+                            }
                         }
                     }
-                }
-            });
+                });
+            })();
         });
 
-        function fetchPlantData(url) {
+        async function fetchPlantData(url) {
             var result = '{}';
 
-            $.ajax({
-                url: url,
-                type: 'get',
-                async: false,
-                success: function (data) {
-                    result = data;
-                },
-                error: function () {
-                    result;
-                }
-            });
+            try {
+                const response = await fetch(url, {
+                    method: 'Get',
+                    headers: { 'Content-Type': 'application/json' },
+                });
 
-            return JSON.parse(result);
+                result = await response.json();
+            } catch (err) {
+                console.error(err);
+                result;
+            }
+
+            return result;
         }
 
         function actualDate() {
