Remove "S" from html

--- a/SolarPlantDisplay.Html/EnergyOverAll.html
+++ b/SolarPlantDisplay.Html/EnergyOverAll.html
@@ -80,6 +80,6 @@
     </script>
 </head>
 <body>
-    S<canvas id="powerPlantChart" style="width:100%;max-width:100%"></canvas>
+    <canvas id="powerPlantChart" style="width:100%;max-width:100%"></canvas>
 </body>
 </html>
